fixed issue where x axis scrollbar was appearing during animations

--- a/Web/stylesheets/main-sheet.css
+++ b/Web/stylesheets/main-sheet.css
@@ -1,7 +1,8 @@
 body {
     font-family: 'Roboto', sans-serif;
     font-weight: 400;
-    color: white
+    color: white;
+    overflow-x: hidden; 
 }
 
 h1 {
